--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-reqwest = "0.12.12"
+env_logger = "0.11.6"
+log = "0.4.25"
+reqwest = { version = "0.12.12", features = ["cookies"] }
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.137"
 tokio = { version = "1.43.0", features = ["net", "macros", "rt", "rt-multi-thread"] }
 tungstenite = { version = "0.26.1", features = ["native-tls"] }
